update blog to render correctly

--- a/_blog/2022-05-05-its-alive.md
+++ b/_blog/2022-05-05-its-alive.md
@@ -2,6 +2,7 @@
 title: It's Alive!
 date: 2022-05-23
 excerpt: hard work pays off, usually
+collection: blog
 header:
   teaser: /images/alive.png
 category: personal
