--- a/_posts/2022-08-22-kink-101.md
+++ b/_posts/2022-08-22-kink-101.md
@@ -3,17 +3,17 @@ title: kink 101
 date: 2022-08-22
 excerpt: this episode is because I was called out
 header:
-  teaser: /images/show-logo.png
-  overlay_image: /images/show-logo.png
+  teaser: /images/kink101.png
+  overlay_image: /images/kink101.png
   overlay_filter: 0.5
 category: kink
 ---
 
 {% include video id='dYJvQTcEQXU' provider='youtube' %}
 
-After being called out I'm finally following up with one of the intended purposes of this podcast. To educate about keenk in ADDITION to relationships, dating and sex. 
+After being called out I'm finally following up with one of the intended purposes of this podcast. To educate about keenk in ADDITION to relationships, dating and sex.
 
-I share the ten most common keenks I've seen in the last 20 years in North American Metropolitan areas. 
+I share the ten most common keenks I've seen in the last 20 years in North American Metropolitan areas.
 
 # ShowListen on  links
 
