--- a/_posts/2022-08-22-kink-101.md
+++ b/_posts/2022-08-22-kink-101.md
@@ -3,11 +3,12 @@ title: kink 101
 date: 2022-08-22
 excerpt: this episode is because I was called out
 header:
-  teaser: /images/kink101.png
-  overlay_image: /images/kink101.png
+  teaser: /images/ts-kink101.png
+  overlay_image: /images/hd-kink.png
   overlay_filter: 0.5
 category: kink
 ---
+Photo by <a href="https://unsplash.com/@charlesdeluvio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">charlesdeluvio</a> on <a href="https://unsplash.com/s/photos/bondage?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 
 {% include video id='dYJvQTcEQXU' provider='youtube' %}
 
