--- a/_blog/2022-05-05-its-alive.md
+++ b/_blog/2022-05-05-its-alive.md
@@ -8,7 +8,7 @@ header:
 ---
 ![cover](/images/alive.png)
 
-### hard work is hard
+# hard work is hard
 
 The last few months I'd been having issues with my old web domain. Not so much the domain, but the display of what I posted/wrote. I didn't take the time to fully understand what went into the webpage I made. Even though it's quite simple (compared to something like cnn.com) there are ***a lot*** of *'moving parts'*
 
